hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics7.php.like_types.exp
File "tconst_on_generics7.php", line 59, characters 11-12:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 43, characters 23-24:
Expected ~[unresolved] because it is an unenforceable type
File "tconst_on_generics7.php", line 56, characters 12-20:
But got StringBox
File "tconst_on_generics7.php", line 66, characters 14-23:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 77, characters 21-23:
Expected int
File "tconst_on_generics7.php", line 50, characters 27-28:
But got dynamic because it is an unenforceable type
File "tconst_on_generics7.php", line 72, characters 11-12:
Invalid argument (Typing[4110])
File "tconst_on_generics7.php", line 43, characters 23-24:
Expected ~[unresolved] because it is an unenforceable type
File "tconst_on_generics7.php", line 69, characters 13-21:
But got StringBox
